feat: achievements, stats and other imgs to card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-navbar></app-navbar>
-<app-card-container></app-card-container>
+<!-- <app-navbar></app-navbar> -->
+<router-outlet></router-outlet>
