--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,2 @@
-<app-navbar></app-navbar>
-<app-card-container></app-card-container>
+<app-navbar (cardLoaded)="onCardLoaded($event)"></app-navbar>
+<app-card-container [card]="selectedCard"></app-card-container>
