--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,42 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* styles.css */
+
+body {
+  overflow-x: hidden;
+  font-feature-settings: "kern" 1, "liga" 1;
+}
+
+.text-blur {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
+}
+
+.flip-card {
+  perspective: 1000px;
+}
+
+.flip-inner {
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+
+.flip-front,
+.flip-back {
+  backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.flip-back {
+  transform: rotateY(180deg);
+}
