--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -34,7 +34,23 @@
         
         <!-- Conteúdo -->
         <!-- Estatísticas -->
-        <div [innerHTML]="sanitizedStats"></div>
+        <!-- <div [innerHTML]="sanitizedStats"></div> --> 
+        <div [innerHTML]="sanitizedFirstLine" class="card-stats-text"></div>
+        <div [innerHTML]="sanitizedSecondLine" class="card-stats-text"></div>
+
+        <div class="flex w-full text-sm font-medium px-1 gap-1 card-stats-text">
+          <div *ngFor="let stat of sanitizedThirdLine; let i = index"
+              [ngClass]="{
+                'items-start': i === 0,
+                'items-center': i === 1,
+                'items-end': i === 2
+              }"
+              class="w-1/3 flex flex-col text-white px-1 rounded">
+            <div class="truncate max-w-full">{{ stat[0] }}</div>
+            <div class="truncate max-w-full">{{ stat[1] }}</div>
+          </div>
+        </div>
+
 
         <!-- Runas -->
         <div [innerHTML]="sanitizedRunas"></div>
@@ -46,8 +62,13 @@
         </div>
 
         <!-- Achievements e data -->
-        <div class="flex items-center">
-          <span [innerHTML]="sanitizedAchievements" class="flex gap-1 items-center w-6 h-6"></span>
+        <div class="flex justify-between items-center">
+          <div [innerHTML]="sanitizedAchievements" class="flex gap-1 items-center w-6 h-6"></div>
+          
+          <div class="mt-2 flex">                    
+              <p class="text-sm inline-flex px-2 py-1 rounded card-stats-text">
+                  {{card.gameDate}}</p>                    
+          </div>
         </div>
 
         
