--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,8 @@
-<div class="carta flip-card w-[308px] h-[560px] relative">
-  <div class="flip-inner relative w-full h-full">
+<div class="carta w-[308px] h-[560px] relative perspective" (click)="toggleFlip($event)" #cardRoot>
+  <div class="flip-inner relative w-full h-full transition-transform duration-500 ease-linear"
+    [ngStyle]="{ 
+      transform: flipped ? (rotationDirection === 'right' ? 'rotateY(180deg)' : 'rotateY(-180deg)') : 'rotateY(0deg)'
+    }">
 
     <!-- Frente -->
     <div
@@ -33,8 +36,7 @@
 
         
         <!-- Conteúdo -->
-        <!-- Estatísticas -->
-        <!-- <div [innerHTML]="sanitizedStats"></div> --> 
+        <!-- Estatísticas --> 
         <div [innerHTML]="sanitizedFirstLine" class="card-stats-text"></div>
         <div [innerHTML]="sanitizedSecondLine" class="card-stats-text"></div>
 
@@ -77,7 +79,7 @@
 
     <!-- Verso -->
     <div
-      class="flip-back rounded-none overflow-hidden shadow-lg border-4"
+      class="flip-back absolute w-full h-full backface-hidden transform rotate-y-180 rounded-none overflow-hidden shadow-lg border-4"
       [ngStyle]="{
         'border': '4px solid transparent',
         'border-image': card.corDoVerso + ' 1',
@@ -85,7 +87,7 @@
       }"
     >
       <div
-        class="items flex justify-center items-center h-full"
+        class="flex justify-center items-center h-full"
         style="background-image: url('assets/img/lol-icone-back.png');
                background-size: 70%;
                background-repeat: no-repeat;
