--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,14 @@ body {
   color: rgb(255, 255, 255);
   text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
 }
-
+/* 
 .flip-card {
   perspective: 1000px;
-}
+} */
 
 .flip-inner {
   transform-style: preserve-3d;
-  transition: transform 0.5s;
+  /* transition: transform 0.5s; */
 }
 
 .rotate-y-180 {
@@ -36,8 +36,16 @@ body {
   height: 100%;
   top: 0;
   left: 0;
+  transform: rotateY(180deg);
 }
 
-.flip-back {
-  transform: rotateY(180deg);
+/* .flip-back {
+} */
+ 
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.perspective {
+  perspective: 1000px;
 }
