--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<form (ngSubmit)="buscarCarta()">
-  <input [(ngModel)]="name" name="name" required placeholder="name" />
-  <input [(ngModel)]="tag" name="tag" required placeholder="Tagline" />
-  <select [(ngModel)]="server" name="server" required>
+<form (ngSubmit)="buscarCarta()" id="search-form" class="w-full max-w-3xl flex flex-col lg:flex-row lg:gap-4 gap-2 justify-center items-center">
+  <input [(ngModel)]="name" name="name" required placeholder="name" class="w-[248px] sm:w-[384px] p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800" />
+  <input [(ngModel)]="tag" name="tag" required placeholder="Tagline" class="w-[248px] sm:w-[384px] p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"/>
+  <select [(ngModel)]="server" name="server" required class="w-[248px] sm:w-[384px] p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800">
     <option value="br1">BR</option>
     <option value="na1">NA</option>
     <option value="euw1">EUW</option>
@@ -9,6 +9,8 @@
     <option value="kr1">KR</option>
     <option value="jp1">JP</option>
   </select>
-  <input [(ngModel)]="matchId" name="matchId" placeholder="Match ID (opcional)" />
-  <button type="submit">Buscar</button>
+  <input [(ngModel)]="matchId" name="matchId" placeholder="Match ID (opcional)" class="w-[248px] sm:w-[384px] p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"/>
+  
+  <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Buscar</button>
+  <button type="button" (click)="salvarImagem()" [disabled]="!cardElement" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Baixarr</button>
 </form>
