--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,9 @@
 
 /* styles.css */
 
-body {
+body { 
+  @apply bg-gradient-to-b from-black via-gray-700 to-black min-h-screen flex flex-col items-center justify-start p-2;
+
   overflow-x: hidden;
   font-feature-settings: "kern" 1, "liga" 1;
 }
@@ -13,15 +15,10 @@ body {
 .text-blur {
   color: rgb(255, 255, 255);
   text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
-}
-/* 
-.flip-card {
-  perspective: 1000px;
-} */
+} 
 
 .flip-inner {
-  transform-style: preserve-3d;
-  /* transition: transform 0.5s; */
+  transform-style: preserve-3d; 
 }
 
 .rotate-y-180 {
@@ -38,9 +35,6 @@ body {
   left: 0;
   transform: rotateY(180deg);
 }
-
-/* .flip-back {
-} */
  
 .backface-hidden {
   backface-visibility: hidden;
