fix: urf kparticipation 42 and button 'baixar'

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,5 +12,5 @@
   <input [(ngModel)]="matchId" name="matchId" placeholder="Match ID (opcional)" class="w-[248px] sm:w-[384px] p-2 rounded-md bg-gray-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-800"/>
   
   <button type="submit" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Buscar</button>
-  <button type="button" (click)="salvarImagem()" [disabled]="!cardElement" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Baixarr</button>
+  <button type="button" (click)="salvarImagem()" [disabled]="!cardElement" class="p-2 rounded-md bg-gray-700 hover:bg-gray-800 text-white font-bold flex-1 max-w-[120px]">Baixar</button>
 </form>
