--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,1 @@
-<app-card-container
-  [card]="selectedCard"
-></app-card-container>
+<app-card-container [card]="selectedCard"></app-card-container>
