--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,13 +1,23 @@
-<div class="player-card carta w-[308px] h-[560px] relative perspective" (click)="toggleFlip($event)" #cardRoot>
-  <div class="flip-inner relative w-full h-full transition-transform duration-500 ease-linear"
-    [ngStyle]="{ 
-      transform: flipped ? (rotationDirection === 'right' ? 'rotateY(180deg)' : 'rotateY(-180deg)') : 'rotateY(0deg)'
-    }">
-
+<div
+  class="player-card carta w-[308px] h-[560px] relative perspective flip-card"
+  [class.flip-enabled]="enableEffects"
+  (click)="toggleFlip($event)"
+  #cardRoot
+>
+  <div
+    class="flip-inner relative w-full h-full transition-transform duration-500 ease-linear"
+    [ngStyle]="{
+      transform: flipped
+        ? rotationDirection === 'right'
+          ? 'rotateY(180deg)'
+          : 'rotateY(-180deg)'
+        : 'rotateY(0deg)'
+    }"
+  >
     <!-- Frente -->
     <div
-      class="flip-front relative w-full h-full rounded-none overflow-hidden shadow-lg border-4 "
-      [ngStyle]="{ 'border': '4px solid ' + card.corDaBorda }"
+      class="flip-front relative w-full h-full rounded-none overflow-hidden shadow-lg border-4"
+      [ngStyle]="{ border: '4px solid ' + card.corDaBorda }"
     >
       <img
         [src]="card.splashArt"
@@ -16,9 +26,6 @@
       />
 
       <div class="absolute bottom-0 w-full text-white p-4 space-y-2">
-        
-
-        <!-- Nome estilizado -->
         <div class="flex justify-center">
           <h2
             class="text-center text-blur"
@@ -34,25 +41,27 @@
           </h2>
         </div>
 
-        
         <!-- Conteúdo -->
-        <!-- Estatísticas --> 
+        <!-- Estatísticas -->
         <div [innerHTML]="sanitizedFirstLine" class="card-stats-text"></div>
         <div [innerHTML]="sanitizedSecondLine" class="card-stats-text"></div>
 
-        <div class="flex w-full text-sm font-medium px-1 gap-1 card-stats-text leading-[1.8rem] min-h-[2.4rem] overflow-visible">
-          <div *ngFor="let stat of sanitizedThirdLine; let i = index"
-              [ngClass]="{
-                'items-start': i === 0,
-                'items-center': i === 1,
-                'items-end': i === 2
-              }"
-              class="w-1/3 flex flex-col text-white px-1 rounded">
+        <div
+          class="flex w-full text-sm font-medium px-1 gap-1 card-stats-text leading-[1.8rem] min-h-[2.4rem] overflow-visible"
+        >
+          <div
+            *ngFor="let stat of sanitizedThirdLine; let i = index"
+            [ngClass]="{
+              'items-start': i === 0,
+              'items-center': i === 1,
+              'items-end': i === 2
+            }"
+            class="w-1/3 flex flex-col text-white px-1 rounded"
+          >
             <div class="truncate max-w-full">{{ stat[0] }}</div>
             <div class="truncate max-w-full">{{ stat[1] }}</div>
           </div>
         </div>
-
 
         <!-- Runas -->
         <div [innerHTML]="sanitizedRunas"></div>
@@ -65,15 +74,17 @@
 
         <!-- Achievements e data -->
         <div class="flex justify-between items-center">
-          <div [innerHTML]="sanitizedAchievements" class="flex gap-1 items-center w-6 h-6"></div>
-          
-          <div class="mt-2 flex">                    
-              <p class="text-sm inline-flex px-2 py-1 rounded card-stats-text">
-                  {{card.gameDate}}</p>                    
+          <div
+            [innerHTML]="sanitizedAchievements"
+            class="flex gap-1 items-center w-6 h-6"
+          ></div>
+
+          <div class="mt-2 flex">
+            <p class="text-sm inline-flex px-2 py-1 rounded card-stats-text">
+              {{ card.gameDate }}
+            </p>
           </div>
         </div>
-
-        
       </div>
     </div>
 
@@ -81,17 +92,19 @@
     <div
       class="flip-back absolute w-full h-full backface-hidden transform rotate-y-180 rounded-none overflow-hidden shadow-lg border-4"
       [ngStyle]="{
-        'border': '4px solid transparent',
+        border: '4px solid transparent',
         'border-image': card.corDoVerso + ' 1',
-        'background': card.corDoVerso
+        background: card.corDoVerso
       }"
     >
       <div
         class="flex justify-center items-center h-full"
-        style="background-image: url('assets/img/lol-icone-back.png');
-               background-size: 70%;
-               background-repeat: no-repeat;
-               background-position: center;"
+        style="
+          background-image: url('assets/img/lol-icone-back.png');
+          background-size: 70%;
+          background-repeat: no-repeat;
+          background-position: center;
+        "
       ></div>
     </div>
   </div>
