--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="p-4 max-w-sm mx-auto">
-  <h2 class="text-xl font-bold mb-4 text-center">Login</h2>
+  <h2 class="text-xl font-bold mb-4 text-center text-white">Login</h2>
 
   <input
     [(ngModel)]="username"
