--- a/src/app/pages/duel/duel.component.html
+++ b/src/app/pages/duel/duel.component.html
@@ -8,7 +8,7 @@
   <p class="text-xl font-semibold mb-4 text-white">{{ statusMessage }}</p>
 
   <!-- Quando não está em partida -->
-  <div *ngIf="!inMatch && (roundPhase === 'done' || roundPhase === 'selection')" class="space-y-4">
+  <div *ngIf="!inMatch && (roundPhase === 'done' || roundPhase === 'idle')" class="space-y-4">
     <button
       *ngIf="!inQueue"
       class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
@@ -48,7 +48,7 @@
       <app-card [card]="selectedCard"></app-card>
     </div>
 
-    <!-- Resultado da rodada (Tailwind) -->
+    <!-- Resultado da rodada -->
     <div
       *ngIf="
         roundPhase === 'result' && (roundHistory.length > 0 || statusMessage)
@@ -80,7 +80,7 @@
 
         <!-- Mensagem de resultado -->
         <p class="text-white mt-4 text-center font-semibold">
-          here {{ lr.result || statusMessage }}
+          {{ lr.result || statusMessage }}
         </p>
 
         <!-- Botões -->
@@ -106,8 +106,7 @@
       </div>
 
       <!-- Se ainda não houver lastRound, mostra só a mensagem -->
-      <div *ngIf="!lastRound() && statusMessage" class="text-center text-white">
-        <!-- <p>here {{ statusMessage }}</p> -->
+      <div *ngIf="!lastRound() && statusMessage" class="text-center text-white"> 
         <div class="flex justify-center mt-4">
           <button
             *ngIf="duelFinished"
