--- a/src/app/pages/duel/duel.component.html
+++ b/src/app/pages/duel/duel.component.html
@@ -1,8 +1,8 @@
-<p class="text-white">
+<!-- <p class="text-white">
   DEBUG: inMatch={{ inMatch }}, roundPhase={{ roundPhase }}, deckSize={{
     currentDeck.length
   }}
-</p>
+</p> -->
 
 <div class="p-6">
   <p class="text-xl font-semibold mb-4 text-white">{{ statusMessage }}</p>
