--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -22,5 +22,7 @@
     Registrar
   </button>
 
-  <div *ngIf="error" class="text-red-500 text-sm mt-2 text-center">{{ error }}</div>
+  <div *ngIf="error" class="text-red-500 text-sm mt-2 text-center">
+    {{ error }}
+  </div>
 </div>
