--- a/src/app/pages/duel/duel.component.html
+++ b/src/app/pages/duel/duel.component.html
@@ -28,7 +28,7 @@
 
   <!-- Durante a partida -->
   <div *ngIf="inMatch || roundPhase === 'result' || roundPhase === 'done'">
-    <!-- Fase de seleção -->
+    
     <div *ngIf="roundPhase === 'selection'" class="space-y-4">
       <p class="text-white font-bold mb-2">Escolha uma carta:</p>
       <div class="flex flex-row gap-4 justify-center flex-wrap md:flex-nowrap">
@@ -41,14 +41,12 @@
       </div>
     </div>
 
-    <!-- Aguardando oponente -->
     <div *ngIf="roundPhase === 'waiting'" class="space-y-4">
       <p class="text-white">Aguardando o oponente jogar...</p>
       <p class="text-white font-bold">Sua carta:</p>
       <app-card [card]="selectedCard"></app-card>
     </div>
 
-    <!-- Resultado da rodada -->
     <div
       *ngIf="
         roundPhase === 'result' && (roundHistory.length > 0 || statusMessage)
@@ -59,7 +57,7 @@
         <div
           class="flex flex-col md:flex-row items-stretch justify-center gap-16 w-full"
         >
-          <!-- Sua carta -->
+          
           <div class="flex-1 flex flex-col items-center">
             <div class="text-sm text-gray-300 mb-2">Você</div>
             <div class="w-64">
@@ -67,7 +65,6 @@
             </div>
           </div>
 
-          <!-- Carta do oponente -->
           <div class="flex-1 flex flex-col items-center">
             <div class="text-sm text-gray-300 mb-2">
               {{ opponent || "Oponente" }}
@@ -77,13 +74,11 @@
             </div>
           </div>
         </div>
-
-        <!-- Mensagem de resultado -->
+ 
         <p class="text-white mt-4 text-center font-semibold">
           {{ lr.result || statusMessage }}
         </p>
-
-        <!-- Botões -->
+ 
         <div class="flex justify-center gap-4 mt-4">
           <button
             *ngIf="!duelFinished"
@@ -105,7 +100,7 @@
         </div>
       </div>
 
-      <!-- Se ainda não houver lastRound, mostra só a mensagem -->
+      <!-- Se ainda não houver lastRound, mostra só a mensagem (casos de disconect do oponente)-->
       <div *ngIf="!lastRound() && statusMessage" class="text-center text-white"> 
         <div class="flex justify-center mt-4">
           <button
