refact error messages in search

--- a/src/app/components/card-container/card-container.component.html
+++ b/src/app/components/card-container/card-container.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <ng-template #noCard>
-    <p class="text-gray-500">Nenhuma carta carregada.</p>
+    <p class="text-gray-500">{{ message || 'Nenhuma carta carregada.' }}</p>
   </ng-template>
 </div>
