--- a/src/app/pages/duel/duel.component.html
+++ b/src/app/pages/duel/duel.component.html
@@ -47,32 +47,25 @@
       <app-card [card]="selectedCard"></app-card>
     </div>
 
+    <!-- resultado extrapolando as cartas aqui -->
     <div
-      *ngIf="
-        roundPhase === 'result' && (roundHistory.length > 0 || statusMessage)
-      "
+      *ngIf="roundPhase === 'result' && (roundHistory.length > 0 || statusMessage)"
       class="space-y-6"
     >
       <div *ngIf="lastRound() as lr" class="flex flex-col items-center">
-        <div
-          class="flex flex-col md:flex-row items-stretch justify-center gap-16 w-full"
-        >
-          
-          <div class="flex-1 flex flex-col items-center">
+
+        <div class="flex flex-row gap-4 justify-center flex-wrap">
+
+          <div class="flex flex-col items-center">
             <div class="text-sm text-gray-300 mb-2">Você</div>
-            <div class="w-64">
-              <app-card [card]="lr.myCard"></app-card>
-            </div>
+            <app-card [card]="lr.myCard"></app-card> 
           </div>
 
-          <div class="flex-1 flex flex-col items-center">
-            <div class="text-sm text-gray-300 mb-2">
-              {{ opponent || "Oponente" }}
-            </div>
-            <div class="w-64">
-              <app-card [card]="lr.opponentCard"></app-card>
-            </div>
+          <div class="flex flex-col items-center">
+            <div class="text-sm text-gray-300 mb-2"> {{ opponent || "Oponente" }} </div>
+            <app-card [card]="lr.opponentCard"></app-card>
           </div>
+
         </div>
  
         <p class="text-white mt-4 text-center font-semibold">
