--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,12 +30,23 @@
           required
           class="w-full sm:w-[80px] min-h-[41px] p-2 rounded-md bg-gray-800 text-white border border-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-600"
         >
-          <option value="br1">BR</option>
-          <option value="na1">NA</option>
-          <option value="euw1">EUW</option>
-          <option value="eun1">EUNE</option>
-          <option value="kr1">KR</option>
-          <option value="jp1">JP</option>
+          <option value="br1">Brazil (BR)</option>
+          <option value="na1">North America (NA)</option>
+          <option value="euw1">Europe West (EUW)</option>
+          <option value="eun1">Europe Nordic & East (EUNE)</option>
+          <option value="kr">Korea (KR)</option>
+          <option value="jp1">Japan (JP)</option>
+          <option value="la1">Latin America North (LA1)</option>
+          <option value="la2">Latin America South (LA2)</option>
+          <option value="oc1">Oceania (OC1)</option>
+          <option value="tr1">Turkey (TR1)</option>
+          <option value="ru">Russia (RU)</option>
+          <option value="ph2">Philippines (PH2)</option>
+          <option value="sg2">Singapore (SG2)</option>
+          <option value="th2">Thailand (TH2)</option>
+          <option value="tw2">Taiwan (TW2)</option>
+          <option value="vn2">Vietnam (VN2)</option> 
+
         </select>
 
         <input
