--- a/src/app/pages/duel/duel.component.html
+++ b/src/app/pages/duel/duel.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar> 
 <!-- <p class="text-white">
   DEBUG: inMatch={{ inMatch }}, roundPhase={{ roundPhase }}, deckSize={{
     currentDeck.length
