--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar> 
 <div class="p-4 max-w-sm mx-auto">
   <h2 class="text-xl font-bold mb-4 text-center text-white">Acessar conta</h2>
 
