--- a/src/app/pages/deck/deck.component.html
+++ b/src/app/pages/deck/deck.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar> 
 <div class="p-4 flex flex-col items-center justify-center min-h-[80vh]">
   <div *ngIf="loading" class="text-gray-600">Carregando...</div>
   <div *ngIf="error" class="text-red-600">{{ error }}</div>
