fix: authenticated navbar - currentRouter === home

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 > 
   <div class="flex flex-wrap items-center gap-2 w-full"> 
 
-    <ng-container *ngIf="currentRouter === '/'">
+    <ng-container *ngIf="currentRouter === '/' || currentRouter === '/home'">
       <form
         (ngSubmit)="buscarCarta()"
         class="flex flex-wrap gap-2 w-full"
